# generative-policies

./: .gitignore  README.md  pyproject.toml
generative_policies/: __init__.py  flow_model.py  obs_encoder.py  prior.py  unet.py  utils.py
generative_policies/action_translation/: __init__.py  action_translator.py  flow_action_translator.py  interface.py  mlp_action_translator.py  translator_policy.py
generative_policies/inverse_dynamics/: __init__.py  flow_inverse_dynamics.py  interface.py  mlp_inverse_dynamics.py
generative_policies/models/: __init__.py  experiment.py  flow_model.py  obs_encoder.py  prior.py  train.py  transformer.py  unet.py
generative_policies/test/: action_translator_comparison.py  generate_trajectories.py  prior_trajectory_steering.py
generative_policies/utils/: __init__.py  utils.py
